--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <button class='start'>Start/Restart</button>
     <div class='score'>Score:<span>0</span></div>
 
-    <div id="touchsurface" class='grid'>
+    <div class='grid'>
       <div></div>
       <div></div>
       <div></div>
