--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
+
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <script defer src="app.js" charset="utf-8"></script>
     <link rel="stylesheet" href="style.css" />
@@ -9,10 +11,11 @@
   </head>
   <body>
     <div class="grid-container">
-    <button class="start">Start/Restart
-      
-      <div class="score">Score: <span>0</span></div>
-    </button>
+      <button class="start">
+        <div>Start/Restart</div>
+
+        <div class="score">Score: <span>0</span></div>
+      </button>
 
       <div class="grid-play">
         <div class="grid">
